Fix alignment slightly

--- a/src/main/frontend/common/styles/role-strategy.scss
+++ b/src/main/frontend/common/styles/role-strategy.scss
@@ -63,7 +63,7 @@ dialog.rsp-dialog {
   color: var(--text-color-secondary);
   cursor: help;
   flex-shrink: 0;
-  margin-left: 0.35rem;
+  margin-left: 0.25rem;
   opacity: 0.65;
   transition: opacity var(--standard-transition);
 }
